--- a/frontend/home.html
+++ b/frontend/home.html
@@ -4,12 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remember Me Do - Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/css/base.css">
+    <style>
+        .hero-visual {
+            position: relative;
+            height: 250px;
+            margin: 40px 0;
+        }
+
+        .brain-icon {
+            font-size: 150px;
+            opacity: 0.15;
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
+        }
+
+        .feature-highlights {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin: 40px 0;
+        }
+
+        .feature-item {
+            text-align: center;
+            padding: 20px;
+            background: rgba(0, 188, 212, 0.05);
+            border-radius: 12px;
+            border-left: 4px solid var(--color-secondary);
+        }
+
+        .feature-item i {
+            font-size: 2.5rem;
+            color: var(--color-secondary);
+            margin-bottom: 10px;
+        }
+
+        .feature-item h4 {
+            color: var(--color-primary);
+            font-weight: 600;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="navbar">
-        <div class="nav-left">Remember Me Do</div>
+        <div class="nav-left">🧠 Remember Me Do</div>
         <div class="nav-right">
             <a href="home.html">Home</a>
             <a href="index.html">Predict</a>
@@ -19,13 +66,37 @@
 
     <main>
         <div class="page-wrapper">
-            <h1>Welcome to Remember Me Do</h1>
-            <p>Sistem pendeteksi tingkat demensia berbasis MRI & patient information dashboard.</p>
+            <section class="hero">
+                <div class="hero-content">
+                    <h1>Remember Me Do</h1>
+                    <p class="subtitle">Advanced Alzheimer's Dementia Prediction & Patient Insights</p>
+                    <p>Sistem pendeteksi tingkat demensia berbasis analisis citra MRI dengan teknologi AI dan dashboard informasi pasien yang komprehensif.</p>
+                </div>
 
-            <div class="button-group">
-                <a class="btn" href="index.html">Start Prediction</a>
-                <a class="btn" href="dashboard.html">Patient Dashboard</a>
-            </div>
+                <div class="hero-visual">
+                    <div class="brain-icon" style="position: absolute; left: 50%; transform: translateX(-50%);">🧠</div>
+                </div>
+
+                <div class="feature-highlights">
+                    <div class="feature-item">
+                        <h4>🎯 Deteksi AI</h4>
+                        <p style="font-size: 0.9rem; margin: 0;">Analisis MRI berbasis neural network untuk hasil akurat</p>
+                    </div>
+                    <div class="feature-item">
+                        <h4>📊 Dashboard</h4>
+                        <p style="font-size: 0.9rem; margin: 0;">Visualisasi data pasien yang interaktif dan informatif</p>
+                    </div>
+                    <div class="feature-item">
+                        <h4>⚡ Cepat</h4>
+                        <p style="font-size: 0.9rem; margin: 0;">Hasil prediksi instan dengan confidence score tinggi</p>
+                    </div>
+                </div>
+
+                <div class="button-group">
+                    <a class="btn" href="index.html">🚀 Start Prediction</a>
+                    <a class="btn btn-primary" href="dashboard.html">📈 Patient Dashboard</a>
+                </div>
+            </section>
         </div>
     </main>
 </body>
