--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -35,6 +35,7 @@
 
         <!-- PAGE TITLE -->
         <h1 style="text-align: center; margin-bottom: 48px; font-size: 2.5rem;">📊 Patient Dashboard</h1>
+           <div id="dashboardError" style="display:none; margin:12px 0; padding:12px; border-radius:8px; background:#ffecec; color:#8a1f1f;"></div>
 
         <!-- ============================
              SECTION 1 — SUMMARY (KPI CARDS)
